# IntelliTutorSystem

./: .replit  GIT_AUTHORSHIP_GUIDE.md  README.md  app.py  auth.py  create_demo_accounts.py  data_store.py  deployment.yml  enhanced_pdf_processor.py  exam_processor.py  models.py  nesa_pdf_processor.py  oauth_auth.py  pdf_processor.py  pyproject.toml  replit.md  replit_auth.py  reset_database.py  routes.py  simplified_pdf_processor.py
instance/: intellitutor.db
static/css/: style.css
static/js/: main.js
temp_extractions/: extraction_2.json
templates/: 403.html  admin_add_question.html  admin_analytics.html  admin_analytics_simple.html  admin_dashboard.html  admin_edit_question.html  admin_review_questions.html  base.html  landing.html  question.html  result.html  student_dashboard.html
templates/auth/: login.html  register.html
