[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
    "trafilatura>=2.0.0",
    "pdfplumber>=0.11.7",
    "nltk>=3.9.1",
    "spacy>=3.8.7",
    "scikit-learn>=1.7.0",
    "textblob>=0.19.0",
    "python-docx>=1.2.0",
    "regex>=2024.11.6",
    "pypdf2>=3.0.1",
]
